# atahos

./: .gitignore  Cargo.toml  README.md  build-iso.sh  build.rs  setup.sh
.cargo/: config.toml
.github/: copilot-instructions.md
boot/: Cargo.toml
boot/src/: main.rs
core/: Cargo.toml
home/: Cargo.toml
iso_root/boot/grub/: grub.cfg
iso_root/boot/limine/: limine.conf
libs/: Cargo.toml
src/: console.rs  interrupts.rs  interupts.rs  limine.rs  linker.ld  logger.rs  main.rs  multiboot.rs  paging.rs  pmm.rs  vmm.rs
