[package]
name = "atahos_core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
compiler_builtins = { version = "0.1", features = ["mem"] }
log = "0.4"
com_logger = "0.1"
limine = "0.5"
talc = "4.4"
spin = "0.10"
x86_64 = "0.15"
